Added solutions to permutations